[project]
name = "infx-content-client"
description = "pyproject.toml file for an existing project."
dynamic = [
   "version"
]
[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "setuptools_scm_git_semver",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_scheme = "guess-next-rc"
local_scheme = "time-dot-node"
normalize = true
write_to = "RAW_VERSION.txt"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}




