[project]
name = "infx-content-client"
description = "pyproject.toml file for an existing project."
dynamic = [
   "version"
]
[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "setuptools_scm_git_semver",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
#version_scheme = "guess_next_rc"
#local_scheme = "semver"
normalize = true
write_to = "RAW_VERSION.txt"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}




